--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
     <title>Best Online Food Delivery Service In India Abhionline.com</title>
+
 <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,8 +22,10 @@
 
         <ul>
             <li class="item"><a href="#">Home</a></li>
-            <li class="item"><a href="#">Service</a></li>
+            <li class="item"><a href="./service.html">Service</a></li>
             <li class="item"><a href="#">About Us</a></li>
+            <li class="item"><a href="./login.html">Login</a></li>
+            <li class="item"><a href="./signup.html">Sign Up</a></li>
             <li class="item"><a href="#">Contact Us</a></li> 
         </ul>
     </nav>
@@ -104,7 +107,7 @@
                 </div>
                 <div class="form-group">
                     <label for="name">Message:</label>
-                    <textarea name="message" id="message" cols="20" rows="10"></textarea>
+                    <textarea title="write message" name="message" id="message" cols="20" rows="10"></textarea>
                 </div>
             </form>
         </div>
@@ -115,5 +118,6 @@
         </div>
     </footer>
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
